# CPP_Template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Core/: CMakeLists.txt
python/Networking/: client.py  packet.py
scripts/: tcp_client.py
src/: CMakeLists.txt  Config.h.in  main.cpp
